[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["BEN <benjamin.hill28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pylint = "^2.6.0"
pytest = "^6.2.2"
black = "^20.8b1"
jupyterlab = "^3.0.9"
numpy = "^1.20.1"
matplotlib = "^3.3.4"
coverage = "^5.5"
pytest-watch = "^4.2.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
